@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2025 Gargoyle Software Inc.
+ * Copyright (c) 2002-2026 Gargoyle Software Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -64,6 +64,8 @@ import org.htmlunit.WebWindow;
 import org.htmlunit.corejs.javascript.Function;
 import org.htmlunit.corejs.javascript.Script;
 import org.htmlunit.corejs.javascript.Scriptable;
+import org.htmlunit.corejs.javascript.ScriptableObject;
+import org.htmlunit.corejs.javascript.VarScope;
 import org.htmlunit.css.ComputedCssStyleDeclaration;
 import org.htmlunit.css.CssStyleSheet;
 import org.htmlunit.html.impl.SimpleRange;
@@ -152,6 +154,10 @@ public class HtmlPage extends SgmlPage {
 
     private Map<String, MappedElementIndexEntry> idMap_ = new ConcurrentHashMap<>();
     private Map<String, MappedElementIndexEntry> nameMap_ = new ConcurrentHashMap<>();
+    // The id/name lookup index is built lazily on first use. Until then,
+    // notifyNodeAdded / fireAttributeChange skip the per-element index updates.
+    // Reads must call ensureMappedElementsBuilt() before consulting idMap_/nameMap_.
+    private boolean mappedElementsBuilt_;
 
     private List<BaseFrameElement> frameElements_ = new ArrayList<>();
     private int parserCount_;
@@ -240,14 +246,13 @@ public class HtmlPage extends SgmlPage {
         final boolean isAboutBlank = getUrl() == UrlUtils.URL_ABOUT_BLANK;
         if (isAboutBlank) {
             // a frame contains first a faked "about:blank" before its real content specified by src gets loaded
-            if (enclosingWindow instanceof FrameWindow
-                    && !((FrameWindow) enclosingWindow).getFrameElement().isContentLoaded()) {
+            if (enclosingWindow instanceof FrameWindow window
+                    && !window.getFrameElement().isContentLoaded()) {
                 return;
             }
 
             // save the URL that should be used to resolve relative URLs in this page
-            if (enclosingWindow instanceof TopLevelWindow) {
-                final TopLevelWindow topWindow = (TopLevelWindow) enclosingWindow;
+            if (enclosingWindow instanceof TopLevelWindow topWindow) {
                 final WebWindow openerWindow = topWindow.getOpener();
                 if (openerWindow != null && openerWindow.getEnclosedPage() != null) {
                     baseUrl_ = openerWindow.getEnclosedPage().getWebResponse().getWebRequest().getUrl();
@@ -264,6 +269,10 @@ public class HtmlPage extends SgmlPage {
         executeDeferredScriptsIfNeeded();
 
         executeEventHandlersIfNeeded(Event.TYPE_DOM_DOCUMENT_LOADED);
+
+        // postponed actions are more or less the async scripts,
+        // they are running in real browsers whenever the download is done
+        processPostponedActionsIfNeeded();
 
         loadFrames();
 
@@ -386,8 +395,8 @@ public class HtmlPage extends SgmlPage {
         final DomElement doc = getDocumentElement();
         if (doc != null) {
             for (final DomNode node : doc.getChildren()) {
-                if (node instanceof HtmlBody) {
-                    return (HtmlBody) node;
+                if (node instanceof HtmlBody body) {
+                    return body;
                 }
             }
         }
@@ -626,6 +635,7 @@ public class HtmlPage extends SgmlPage {
     @Override
     public DomElement getElementById(final String elementId) {
         if (elementId != null) {
+            ensureMappedElementsBuilt();
             final MappedElementIndexEntry elements = idMap_.get(elementId);
             if (elements != null) {
                 return elements.first();
@@ -946,8 +956,11 @@ public class HtmlPage extends SgmlPage {
             }
         }
 
+        final Window window = getEnclosingWindow().getScriptableObject();
+        final VarScope scope = ScriptableObject.getTopLevelScope(window.getParentScope());
+
         final Object result = getWebClient().getJavaScriptEngine()
-                .execute(this, getEnclosingWindow().getScriptableObject(), sourceCode, sourceName, startLine);
+                .execute(this, scope, sourceCode, sourceName, startLine);
         return new ScriptResult(result);
     }
 
@@ -1025,9 +1038,12 @@ public class HtmlPage extends SgmlPage {
             return JavaScriptLoadResult.COMPILATION_ERROR;
         }
 
+        final Window window = getEnclosingWindow().getScriptableObject();
+        final VarScope scope = ScriptableObject.getTopLevelScope(window.getParentScope());
+
         @SuppressWarnings("unchecked")
         final AbstractJavaScriptEngine<Object> engine = (AbstractJavaScriptEngine<Object>) client.getJavaScriptEngine();
-        engine.execute(this, getEnclosingWindow().getScriptableObject(), script);
+        engine.execute(this, scope, script);
         return JavaScriptLoadResult.SUCCESS;
     }
 
@@ -1115,7 +1131,10 @@ public class HtmlPage extends SgmlPage {
         final String scriptCode = response.getContentAsString(scriptEncoding);
         if (null != scriptCode) {
             final AbstractJavaScriptEngine<?> javaScriptEngine = client.getJavaScriptEngine();
-            final Scriptable scope = getEnclosingWindow().getScriptableObject();
+
+            final Window window = getEnclosingWindow().getScriptableObject();
+            final VarScope scope = ScriptableObject.getTopLevelScope(window.getParentScope());
+
             final Object script = javaScriptEngine.compile(this, scope, scriptCode, url.toExternalForm(), 1);
             if (script != null && cache.cacheIfPossible(request, response, script)) {
                 // no cleanup if the response is stored inside the cache
@@ -1269,8 +1288,7 @@ public class HtmlPage extends SgmlPage {
         }
 
         // If this page was loaded in a frame, execute the version of the event specified on the frame tag.
-        if (window instanceof FrameWindow) {
-            final FrameWindow fw = (FrameWindow) window;
+        if (window instanceof FrameWindow fw) {
             final BaseFrameElement frame = fw.getFrameElement();
 
             // if part of a document fragment, then the load event is not triggered
@@ -1316,8 +1334,7 @@ public class HtmlPage extends SgmlPage {
     }
 
     private boolean isOnbeforeunloadAccepted(final HtmlPage page, final Event event) {
-        if (event instanceof BeforeUnloadEvent) {
-            final BeforeUnloadEvent beforeUnloadEvent = (BeforeUnloadEvent) event;
+        if (event instanceof BeforeUnloadEvent beforeUnloadEvent) {
             if (beforeUnloadEvent.isBeforeUnloadMessageSet()) {
                 final OnbeforeunloadHandler handler = getWebClient().getOnbeforeunloadHandler();
                 if (handler == null) {
@@ -1480,6 +1497,13 @@ public class HtmlPage extends SgmlPage {
         return getWebResponse().getResponseHeaderValue("Refresh");
     }
 
+    private void processPostponedActionsIfNeeded() {
+        if (!getWebClient().isJavaScriptEnabled()) {
+            return;
+        }
+        getWebClient().getJavaScriptEngine().processPostponedActions();
+    }
+
     /**
      * Executes any deferred scripts, if necessary.
      */
@@ -1492,8 +1516,7 @@ public class HtmlPage extends SgmlPage {
 
         // don't call getElementsByTagName() here because it creates a live collection
         for (final HtmlElement elem : doc.getHtmlElementDescendants()) {
-            if ("script".equals(elem.getLocalName()) && (elem instanceof HtmlScript)) {
-                final HtmlScript script = (HtmlScript) elem;
+            if ("script".equals(elem.getLocalName()) && (elem instanceof HtmlScript script)) {
                 if (script.isDeferred() && ATTRIBUTE_NOT_DEFINED != script.getSrcAttribute()) {
                     scripts.add(script);
                 }
@@ -1611,13 +1634,12 @@ public class HtmlPage extends SgmlPage {
                 // The element with focus isn't on this page
                 elementToGiveFocus = elements.get(0);
             }
+            else if (index == elements.size() - 1) {
+                // if at last jump to start
+                elementToGiveFocus = elements.get(0);
+            }
             else {
-                if (index == elements.size() - 1) {
-                    elementToGiveFocus = elements.get(0);
-                }
-                else {
-                    elementToGiveFocus = elements.get(index + 1);
-                }
+                elementToGiveFocus = elements.get(index + 1);
             }
         }
 
@@ -1649,13 +1671,12 @@ public class HtmlPage extends SgmlPage {
                 // The element with focus isn't on this page
                 elementToGiveFocus = elements.get(elements.size() - 1);
             }
+            else if (index == 0) {
+                // first; back to the last
+                elementToGiveFocus = elements.get(elements.size() - 1);
+            }
             else {
-                if (index == 0) {
-                    elementToGiveFocus = elements.get(elements.size() - 1);
-                }
-                else {
-                    elementToGiveFocus = elements.get(index - 1);
-                }
+                elementToGiveFocus = elements.get(index - 1);
             }
         }
 
@@ -1692,6 +1713,7 @@ public class HtmlPage extends SgmlPage {
      */
     public List<DomElement> getElementsById(final String elementId) {
         if (elementId != null) {
+            ensureMappedElementsBuilt();
             final MappedElementIndexEntry elements = idMap_.get(elementId);
             if (elements != null) {
                 return new ArrayList<>(elements.elements());
@@ -1712,6 +1734,7 @@ public class HtmlPage extends SgmlPage {
     @SuppressWarnings("unchecked")
     public <E extends DomElement> E getElementByName(final String name) throws ElementNotFoundException {
         if (name != null) {
+            ensureMappedElementsBuilt();
             final MappedElementIndexEntry elements = nameMap_.get(name);
             if (elements != null) {
                 return (E) elements.first();
@@ -1730,6 +1753,7 @@ public class HtmlPage extends SgmlPage {
      */
     public List<DomElement> getElementsByName(final String name) {
         if (name != null) {
+            ensureMappedElementsBuilt();
             final MappedElementIndexEntry elements = nameMap_.get(name);
             if (elements != null) {
                 return new ArrayList<>(elements.elements());
@@ -1749,6 +1773,7 @@ public class HtmlPage extends SgmlPage {
         if (idAndOrName == null) {
             return Collections.emptyList();
         }
+        ensureMappedElementsBuilt();
         final MappedElementIndexEntry list1 = idMap_.get(idAndOrName);
         final MappedElementIndexEntry list2 = nameMap_.get(idAndOrName);
         final List<DomElement> list = new ArrayList<>();
@@ -1771,19 +1796,19 @@ public class HtmlPage extends SgmlPage {
      * @param node the node that has just been added to the document
      */
     void notifyNodeAdded(final DomNode node) {
-        if (node instanceof DomElement) {
-            addMappedElement((DomElement) node, true);
+        if (node instanceof DomElement element1) {
+            addMappedElement(element1, true);
 
-            if (node instanceof BaseFrameElement) {
-                frameElements_.add((BaseFrameElement) node);
+            if (node instanceof BaseFrameElement element) {
+                frameElements_.add(element);
             }
 
             if (node.getFirstChild() != null) {
                 for (final Iterator<HtmlElement> iterator = node.new DescendantHtmlElementsIterator();
                         iterator.hasNext();) {
                     final HtmlElement child = iterator.next();
-                    if (child instanceof BaseFrameElement) {
-                        frameElements_.add((BaseFrameElement) child);
+                    if (child instanceof BaseFrameElement element) {
+                        frameElements_.add(element);
                     }
                 }
             }
@@ -1801,8 +1826,8 @@ public class HtmlPage extends SgmlPage {
      * @param node the node that has just been removed from the tree
      */
     void notifyNodeRemoved(final DomNode node) {
-        if (node instanceof HtmlElement) {
-            removeMappedElement((HtmlElement) node, true, true);
+        if (node instanceof HtmlElement element) {
+            removeMappedElement(element, true, true);
 
             if (node instanceof BaseFrameElement) {
                 frameElements_.remove(node);
@@ -1825,34 +1850,66 @@ public class HtmlPage extends SgmlPage {
      * @param recurse indicates if children must be added too
      */
     void addMappedElement(final DomElement element, final boolean recurse) {
+        // Index is built lazily; skip while not built. ensureMappedElementsBuilt()
+        // walks the tree once and populates everything on first read.
+        if (!mappedElementsBuilt_) {
+            return;
+        }
         if (isAncestorOf(element)) {
-            addElement(idMap_, element, DomElement.ID_ATTRIBUTE, recurse);
-            addElement(nameMap_, element, DomElement.NAME_ATTRIBUTE, recurse);
+            addElement(element, recurse);
         }
     }
 
-    private void addElement(final Map<String, MappedElementIndexEntry> map, final DomElement element,
-            final String attribute, final boolean recurse) {
-        final String value = element.getAttribute(attribute);
+    private void ensureMappedElementsBuilt() {
+        if (mappedElementsBuilt_) {
+            return;
+        }
 
-        if (ATTRIBUTE_NOT_DEFINED != value) {
-            MappedElementIndexEntry elements = map.get(value);
+        final DomElement root = getDocumentElement();
+        if (root != null) {
+            addElement(root, true);
+        }
+
+        // Flip the flag only after the maps are populated, so a partial
+        // failure mid-walk leaves us with built_=false and the next read
+        // tries again rather than seeing a half-populated index.
+        mappedElementsBuilt_ = true;
+    }
+
+    private void addElement(final DomElement element, final boolean recurse) {
+        final String idValue = element.getAttribute(DomElement.ID_ATTRIBUTE);
+        if (ATTRIBUTE_NOT_DEFINED != idValue) {
+            MappedElementIndexEntry elements = idMap_.get(idValue);
             if (elements == null) {
                 elements = new MappedElementIndexEntry();
                 elements.add(element);
-                map.put(value, elements);
+                idMap_.put(idValue, elements);
             }
             else {
                 elements.add(element);
             }
         }
+
+        final String nameValue = element.getAttribute(DomElement.NAME_ATTRIBUTE);
+        if (ATTRIBUTE_NOT_DEFINED != nameValue) {
+            MappedElementIndexEntry elements = nameMap_.get(nameValue);
+            if (elements == null) {
+                elements = new MappedElementIndexEntry();
+                elements.add(element);
+                nameMap_.put(nameValue, elements);
+            }
+            else {
+                elements.add(element);
+            }
+        }
+
         if (recurse) {
             // poor man's approach - we don't use getChildElements()
             // to avoid a bunch of object constructions
             DomNode nextChild = element.getFirstChild();
             while (nextChild != null) {
-                if (nextChild instanceof DomElement) {
-                    addElement(map, (DomElement) nextChild, attribute, true);
+                if (nextChild instanceof DomElement domElement) {
+                    addElement(domElement, true);
                 }
                 nextChild = nextChild.getNextSibling();
             }
@@ -1866,28 +1923,41 @@ public class HtmlPage extends SgmlPage {
      * @param descendant indicates of the element was descendant of this HtmlPage, but now its parent might be null
      */
     void removeMappedElement(final DomElement element, final boolean recurse, final boolean descendant) {
+        // see addMappedElement: while the index is unbuilt, removals are also no-ops.
+        if (!mappedElementsBuilt_) {
+            return;
+        }
         if (descendant || isAncestorOf(element)) {
-            removeElement(idMap_, element, DomElement.ID_ATTRIBUTE, recurse);
-            removeElement(nameMap_, element, DomElement.NAME_ATTRIBUTE, recurse);
+            removeElement(element, recurse);
         }
     }
 
-    private void removeElement(final Map<String, MappedElementIndexEntry> map, final DomElement element,
-            final String attribute, final boolean recurse) {
-        final String value = element.getAttribute(attribute);
-
-        if (ATTRIBUTE_NOT_DEFINED != value) {
-            final MappedElementIndexEntry elements = map.remove(value);
+    private void removeElement(final DomElement element, final boolean recurse) {
+        final String idValue = element.getAttribute(DomElement.ID_ATTRIBUTE);
+        if (ATTRIBUTE_NOT_DEFINED != idValue) {
+            final MappedElementIndexEntry elements = idMap_.remove(idValue);
             if (elements != null) {
                 elements.remove(element);
                 if (!elements.elements_.isEmpty()) {
-                    map.put(value, elements);
+                    idMap_.put(idValue, elements);
                 }
             }
         }
+
+        final String nameValue = element.getAttribute(DomElement.NAME_ATTRIBUTE);
+        if (ATTRIBUTE_NOT_DEFINED != nameValue) {
+            final MappedElementIndexEntry elements = nameMap_.remove(nameValue);
+            if (elements != null) {
+                elements.remove(element);
+                if (!elements.elements_.isEmpty()) {
+                    nameMap_.put(nameValue, elements);
+                }
+            }
+        }
+
         if (recurse) {
             for (final DomElement child : element.getChildElements()) {
-                removeElement(map, child, attribute, true);
+                removeElement(child, true);
             }
         }
     }
@@ -1908,12 +1978,12 @@ public class HtmlPage extends SgmlPage {
 
         base_ = null;
         for (final HtmlElement baseElement : baseElements) {
-            if (baseElement instanceof HtmlBase) {
+            if (baseElement instanceof HtmlBase base) {
                 if (base_ != null) {
                     notifyIncorrectness("Multiple 'base' detected, only the first is used.");
                     break;
                 }
-                base_ = (HtmlBase) baseElement;
+                base_ = base;
             }
         }
     }
@@ -1982,6 +2052,7 @@ public class HtmlPage extends SgmlPage {
 
         result.idMap_ = new ConcurrentHashMap<>();
         result.nameMap_ = new ConcurrentHashMap<>();
+        result.mappedElementsBuilt_ = false;
 
         return result;
     }
@@ -2356,14 +2427,14 @@ public class HtmlPage extends SgmlPage {
                         baseUrl = new URL(href);
                     }
                     else if (href.startsWith("//")) {
-                        baseUrl = new URL(String.format("%s:%s", url.getProtocol(), href));
+                        baseUrl = new URL("%s:%s".formatted(url.getProtocol(), href));
                     }
                     else if (href.length() > 0 && href.charAt(0) == '/') {
                         final int port = Window.getPort(url);
-                        baseUrl = new URL(String.format("%s://%s:%d%s", url.getProtocol(), url.getHost(), port, href));
+                        baseUrl = new URL("%s://%s:%d%s".formatted(url.getProtocol(), url.getHost(), port, href));
                     }
                     else if (url.toString().endsWith("/")) {
-                        baseUrl = new URL(String.format("%s%s", url, href));
+                        baseUrl = new URL("%s%s".formatted(url, href));
                     }
                     else {
                         baseUrl = new URL(UrlUtils.resolveUrl(url, href));
@@ -2518,8 +2589,8 @@ public class HtmlPage extends SgmlPage {
      */
     public HtmlElement getActiveElement() {
         final DomElement activeElement = getFocusedElement();
-        if (activeElement instanceof HtmlElement) {
-            return (HtmlElement) activeElement;
+        if (activeElement instanceof HtmlElement element) {
+            return element;
         }
 
         final HtmlElement body = getBody();
@@ -2560,26 +2631,21 @@ public class HtmlPage extends SgmlPage {
      * @param function the JavaScript Function to call
      * @param thisObject the "this" object to be used during invocation
      * @param args the arguments to pass into the call
-     * @param htmlElementScope the HTML element for which this script is being executed
+     * @param htmlElement the HTML element for which this script is being executed
      *        This element will be the context during the JavaScript execution. If null,
      *        the context will default to the page.
      * @return a ScriptResult which will contain both the current page (which may be different from
      *        the previous page) and a JavaScript result object.
      */
     public ScriptResult executeJavaScriptFunction(final Object function, final Object thisObject,
-            final Object[] args, final DomNode htmlElementScope) {
+            final Object[] args, final DomNode htmlElement) {
         if (!getWebClient().isJavaScriptEnabled()) {
             return new ScriptResult(null);
         }
 
-        return executeJavaScriptFunction((Function) function, (Scriptable) thisObject, args, htmlElementScope);
-    }
-
-    private ScriptResult executeJavaScriptFunction(final Function function, final Scriptable thisObject,
-            final Object[] args, final DomNode htmlElementScope) {
-
         final JavaScriptEngine engine = (JavaScriptEngine) getWebClient().getJavaScriptEngine();
-        final Object result = engine.callFunction(this, function, thisObject, args, htmlElementScope);
+        final Object result = engine.callFunction(this,
+                                (Function) function, (Scriptable) thisObject, args, htmlElement);
 
         return new ScriptResult(result);
     }
@@ -2684,13 +2750,12 @@ public class HtmlPage extends SgmlPage {
         final List<CssStyleSheet> styles = new ArrayList<>();
         if (getWebClient().getOptions().isCssEnabled()) {
             for (final HtmlElement htmlElement : getHtmlElementDescendants()) {
-                if (htmlElement instanceof HtmlStyle) {
-                    styles.add(((HtmlStyle) htmlElement).getSheet());
+                if (htmlElement instanceof HtmlStyle style) {
+                    styles.add(style.getSheet());
                     continue;
                 }
 
-                if (htmlElement instanceof HtmlLink) {
-                    final HtmlLink link = (HtmlLink) htmlElement;
+                if (htmlElement instanceof HtmlLink link) {
                     if (link.isStyleSheetLink()) {
                         styles.add(link.getSheet());
                     }
@@ -2804,8 +2869,8 @@ public class HtmlPage extends SgmlPage {
                 clearComputedStyles();
                 return;
             }
-            if (changedNode instanceof HtmlLink) {
-                if (((HtmlLink) changedNode).isStyleSheetLink()) {
+            if (changedNode instanceof HtmlLink link) {
+                if (link.isStyleSheetLink()) {
                     clearComputedStyles();
                     return;
                 }
@@ -2899,8 +2964,7 @@ public class HtmlPage extends SgmlPage {
             computedStyles_.clear();
         }
 
-        public synchronized Map<String, ComputedCssStyleDeclaration> remove(
-                final DomNode element) {
+        public synchronized Map<String, ComputedCssStyleDeclaration> remove(final DomNode element) {
             return computedStyles_.remove(element);
         }
 
@@ -2921,8 +2985,10 @@ public class HtmlPage extends SgmlPage {
         }
 
         void add(final DomElement element) {
-            elements_.add(element);
-            sorted_ = elements_.size() < 2;
+            if (elements_.indexOf(element) == -1) {
+                elements_.add(element);
+                sorted_ = elements_.size() < 2;
+            }
         }
 
         DomElement first() {
